--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
 	],
 	"require": {
 		"ext-json": "*",
-		"knplabs/github-api": "^2.11",
-		"php-http/guzzle6-adapter": "^1.1",
-		"symfony/flex": "^1.4",
-		"symfony/console": "^4.4",
-		"symfony/framework-bundle": "^4.4",
-		"symfony/dotenv": "^4.4",
-		"symfony/yaml": "^4.4"
+		"php": "^7.4",
+		"knplabs/github-api": "^2.12",
+		"symfony/flex": "^1.6",
+		"php-http/guzzle6-adapter": "^2.0",
+		"symfony/console": "^5.0",
+		"symfony/framework-bundle": "^5.0",
+		"symfony/dotenv": "^5.0",
+		"symfony/yaml": "^5.0"
 	},
 	"conflict": {
 		"symfony/symfony": "*"
