--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,15 @@
 	],
 	"require": {
 		"ext-json": "*",
-		"php": "^7.4",
-		"knplabs/github-api": "^2.12",
-		"symfony/flex": "^1.6",
-		"php-http/guzzle6-adapter": "^2.0",
-		"symfony/console": "^5.0",
-		"symfony/framework-bundle": "^5.0",
-		"symfony/dotenv": "^5.0",
-		"symfony/yaml": "^5.0"
+		"php": "^8.0",
+		"knplabs/github-api": "^3.0",
+		"symfony/flex": "^1.14",
+		"guzzlehttp/guzzle": "^7.0.1",
+		"http-interop/http-factory-guzzle": "^1.0",
+		"symfony/console": "^5.3",
+		"symfony/framework-bundle": "^5.3",
+		"symfony/dotenv": "^5.3",
+		"symfony/yaml": "^5.3"
 	},
 	"conflict": {
 		"symfony/symfony": "*"
